sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:11: error: not found: value detrompeur1
    detrompeur=detrompeur1
               ^